@@ -126,12 +126,12 @@ REPOSITORY
     <https://github.com/michal-josef-spacek/Task-Curses-UI>
 
 AUTHOR
-    Michal Špaček <mailto:skim@cpan.org>
+    Michal Josef Špaček <mailto:skim@cpan.org>
 
     <http://skim.cz>
 
 LICENSE AND COPYRIGHT
-     © 2015 Michal Špaček
+     © 2015 Michal Josef Špaček
      Artistic License
      BSD 2-Clause License
 
