@@ -2,6 +2,7 @@
  - Fix Makefile.PL fails with no '.' in @INC.
  - Update Module::Install to 1.19 version.
  - Update author github username.
+ - Update author name.
 
 0.03 2015-11-05T11:58:07+01:00
  - Update Curses::UI::Number to 0.06 version.
